<resources>
    <string name="app_name">乐行.合肥</string>
    <string name="homepage">首页</string>
    <string name="user">我的</string>
    <string name="special_life">惠生活</string>
    <string name="change_car">换乘</string>
    <string name="recharge_num">充值金额</string>
    <string name="pay_way">支付方式</string>
    <string name="go_buy">去支付</string>
    <string name="complete">完成</string>
    <string name="buy_instant">立即购票</string>
    <string name="msg_push">消息推送</string>
    <string name="riding_notice">乘车须知</string>
    <string name="my_order">我的订单</string>
    <string name="option_feedback">意见反馈</string>
    <string name="subway_line">地铁热线</string>
    <string name="about_me">关于我们</string>
    <string name="clear_cash">清除缓存</string>
    <string name="nfc_sensing_area">NFC感应区</string>
    <string name="card_recharge">卡片充值</string>
    <string name="nfc_card_charge_recodes">单程票详情</string>
    <string name="attach_the_card_to_the_back_of_the_phone_inquire">请将卡片贴在手机感应区</string>
</resources>
