<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.it_ch.demonstrationapp.MainActivity">

    <LinearLayout
        android:id="@+id/ly_tab_menu"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ly_tab_menu_homepage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="3dp">

                <TextView
                    android:id="@+id/tab_menu_homepage"
                    style="@style/tab_menu_text"
                    android:drawableTop="@drawable/tab_menu_icon_homepage"
                    android:text="@string/homepage" />

                <TextView
                    android:id="@+id/tab_menu_homepage_num"
                    style="@style/tab_menu_bgnum"
                    android:layout_toRightOf="@+id/tab_menu_homepage"
                    android:text="99+"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_tab_menu_change"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tab_menu_change"
                    style="@style/tab_menu_text"
                    android:drawableTop="@drawable/tab_menu_icon_change"
                    android:text="@string/change_car" />

                <TextView
                    android:id="@+id/tab_menu_change_num"
                    style="@style/tab_menu_bgnum"
                    android:layout_toRightOf="@+id/tab_menu_change"
                    android:text="99+"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_tab_menu_life"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tab_menu_life"
                    style="@style/tab_menu_text"
                    android:drawableTop="@drawable/tab_menu_icon_life"
                    android:text="@string/special_life" />

                <TextView
                    android:id="@+id/tab_menu_more_life"
                    style="@style/tab_menu_bgnum"
                    android:layout_toRightOf="@+id/tab_menu_life"
                    android:text="99+"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_tab_menu_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tab_menu_user"
                    style="@style/tab_menu_text"
                    android:drawableTop="@drawable/tab_menu_icon_user"
                    android:text="@string/user" />

                <ImageView
                    android:id="@+id/tab_menu_setting_point"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_toRightOf="@id/tab_menu_user"
                    android:src="@mipmap/redpoint"
                    />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/ly_tab_menu"
        android:background="@color/text_gray" />

    <android.support.v4.view.ViewPager
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar" />

</RelativeLayout>
